Fix IOS overflowed content display issue on touch devices

--- a/src/assets/scss/core/elements/chat/_work-area.scss
+++ b/src/assets/scss/core/elements/chat/_work-area.scss
@@ -60,6 +60,11 @@
 
 	@include shadows.shadow-bottom;
 	@include scrollbar.scrollbar($workAreaScrollbarTrackColor, $workAreaScrollbarHandleColor);
+
+	// IOS disappearing scrollable element fix
+	@supports (-webkit-overflow-scrolling: touch) {
+		-webkit-overflow-scrolling: touch;
+	}
 }
 
 &-drawer {
