--- a/src/assets/scss/core/elements/popup/_wrapper.scss
+++ b/src/assets/scss/core/elements/popup/_wrapper.scss
@@ -13,6 +13,11 @@
 	overflow: auto;
 	overscroll-behavior: contain;
 
+	// IOS disappearing scrollable element fix
+	@supports (-webkit-overflow-scrolling: touch) {
+		-webkit-overflow-scrolling: touch;
+	}
+
 	&-inner {
 		max-width: 100%;
 		margin: auto;
